[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
#cargo 默认使用‘package.name’
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = "0.12.9"

